WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216505
Type of AnalyserNode's attributes should not be unrestricted double
https://bugs.webkit.org/show_bug.cgi?id=216505
Summary
Type of AnalyserNode's attributes should not be unrestricted double
Chris Dumez
Reported
2020-09-14 16:47:02 PDT
Type of AnalyserNode's attributes should not be unrestricted double. They should use double type so that we throw when trying to set them to NaN or infinity values.
Attachments
Patch
(9.40 KB, patch)
2020-09-14 16:56 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-09-14 16:56:57 PDT
Created
attachment 408762
[details]
Patch
EWS
Comment 2
2020-09-14 18:59:24 PDT
Committed
r267066
: <
https://trac.webkit.org/changeset/267066
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 408762
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-09-14 19:00:49 PDT
<
rdar://problem/68893060
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug