Type of AnalyserNode's attributes should not be unrestricted double https://bugs.webkit.org/show_bug.cgi?id=216505

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline existing WPT test now that the exception message was improved.

* web-platform-tests/webaudio/the-audio-api/the-analysernode-interface/ctor-analyser-expected.txt:

Source/WebCore:

Type of AnalyserNode's attributes should not be unrestricted double. They should use double type
so that we throw when trying to set them to NaN or infinity values.

No new tests, updated existing test.

* Modules/webaudio/AnalyserNode.cpp:
(WebCore::AnalyserNode::setSmoothingTimeConstant):
* Modules/webaudio/AnalyserNode.idl:

LayoutTests:

Extend layout test coverage.

* webaudio/analyser-exception-expected.txt:
* webaudio/analyser-exception.html:


Canonical link: https://commits.webkit.org/229348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267066 268f45cc-cd09-0410-ab3c-d52691b4dbfc